<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">springcat</string>
    <string name="subtitle">Node サーバー 起動用</string>
    <string name="start_command_label">起動コマンド</string>
    <string name="url_label">サーバー URL</string>
    <string name="copy">コピー</string>
    <string name="copied">コピーしました</string>
    <string name="start_command">npm start</string>
    <string name="server_url">http://localhost:3000</string>
    <string name="hint">Termux などにコマンドを貼り付けてサーバーを起動できます。</string>
</resources>
